LinKreta_POC_Repository/force-app/main/default/objects/SubExpertisePL__c/SubExpertisePL__c.object-meta.xml
<CustomObject>
    <description>This object is part of the custom functionality for managing the dependency between the 3 Picklists on the Lead object namely Solution (Single Picklist), Expertise (Multi Picklist) and Sub Expertise (Multi Picklist). It stores the List of Values (LOV) configured for the field named Sub Expertise.</description>
    <label>Sub Expertise (PL)</label>
    <nameField>
        <displayFormat>SE - {000000}</displayFormat>
        <label>Sub Expertise Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sub Expertise (PL)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>