LinKreta_POC_Repository/force-app/main/default/objects/SubExpertisePL__c/fields/Expertise__c.field-meta.xml
<CustomField>
    <fullName>Expertise__c</fullName>
    <description>This stores and represents the dependency between the Expertise (Controlling) field and Sub Expertise (Controlled) field.</description>
    <label>Expertise</label>
    <referenceTo>ExpertisePL__c</referenceTo>
    <relationshipLabel>Sub Expertise</relationshipLabel>
    <relationshipName>Sub_Expertise</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>