LinKreta_POC_Repository/force-app/main/default/objects/SubExpertisePL__c/fields/ExpertiseLOV__c.field-meta.xml
<CustomField>
    <fullName>ExpertiseLOV__c</fullName>
    <description>This represents the List of Value of the associated Expertise (Controlling) field.</description>
    <formula>Expertise__r.LOV__c</formula>
    <label>Expertise (LOV)</label>
    <type>Text</type>
</CustomField>