LinKreta_POC_Repository/force-app/main/default/objects/SubExpertisePL__c/fields/SMEG_Leader__c.field-meta.xml
<CustomField>
    <fullName>SMEG_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMEG Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sub_Expertise_PL</relationshipName>
    <type>Lookup</type>
</CustomField>