LinKreta_POC_Repository/force-app/main/default/objects/SubExpertisePL__c/fields/SMEG_Master__c.field-meta.xml
<CustomField>
    <fullName>SMEG_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMEG Master</label>
    <referenceTo>SMEG_Master__c</referenceTo>
    <relationshipLabel>Sub Expertise (PL)</relationshipLabel>
    <relationshipName>Sub_Expertise_PL</relationshipName>
    <type>Lookup</type>
</CustomField>