LinKreta_POC_Repository/force-app/main/default/objects/SubExpertisePL__c/fields/SMEG_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>SMEG_Short_Name__c</fullName>
    <formula>SMEG_Master__r.SMEG_Short_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMEG Short Name</label>
    <type>Text</type>
</CustomField>