LinKreta_POC_Repository/force-app/main/default/objects/SubExpertisePL__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <formula>Expertise__r.SolutionLOV__c</formula>
    <label>Solution</label>
    <type>Text</type>
</CustomField>