LinKreta_POC_Repository/force-app/main/default/objects/SubExpertisePL__c/fields/Solution_PL__c.field-meta.xml
<CustomField>
    <fullName>Solution_PL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution (PL)</label>
    <referenceTo>SolutionPL__c</referenceTo>
    <relationshipLabel>Sub Expertise (PL)</relationshipLabel>
    <relationshipName>Sub_Expertise_PL</relationshipName>
    <type>Lookup</type>
</CustomField>